In the event the dashboard's GroupInvitation.message is very long and has no spaces, use word-break:break-all to prevent it overflowing the alert.

--- a/web-frontend/modules/core/assets/scss/components/quote.scss
+++ b/web-frontend/modules/core/assets/scss/components/quote.scss
@@ -3,4 +3,5 @@
   padding: 4px 0 4px 10px;
   margin: 10px 0;
   font-style: italic;
+  word-break: break-all;
 }
